# destructo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.xml  main.cpp
inc/: Accelerometer.h  Config.h  Databus.h
inc/Accelerometers/: D_ADXL345.h
inc/spdlog/: logger.h
src/: Accelerometer.cpp  Config.cpp  Databus.cpp
src/Accelerometers/: D_ADXL345.cpp
src/destructo/: ADXL345.java  Accelerometer.java  Command.java  Control.java  Copter.java  Destructo.java  Engine.java  Server.java  ServerMessage.java  Target.java
src/destructo/DataStructures/: CircularQueue.java
src/destructo/components/: AccelerometerAnalysis.java  DataAnalysis.java
src/destructo/config/: Constants.java
src/destructo/message/: ServerMessage.java
src/destructo/message/engine/: Start.java
